fix image bug by using display block

--- a/scss/gallery.scss
+++ b/scss/gallery.scss
@@ -121,6 +121,7 @@ $red: #ec6565;
             }
         }
         .header {
+            display: block;
         }
         .avatar {
             box-sizing: border-box;
